# agno-ice-cream-shop-bq-agent

./: .envexample  .gitignore  README.md  agent.py  main.py  pyproject.toml
static/: index.html
